next-to first commit

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,13 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      À-Propos
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <p>
+    Comme c'est Gisèle qui invite, c'est moi qui décide du menu.
+  </p>
 </ion-content>
