--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,11 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>Bienvenue Gisèle</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    Tu as sûrement beaucoup pensé à moi ces derniers temps...
   </p>
   <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+    Alors, je suis tout ouï !!!
   </p>
 </ion-content>
