corrected according to client spec

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,11 +5,8 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Bienvenue Gisèle</h2>
-  <p>
-    Tu as sûrement beaucoup pensé à moi ces derniers temps...
-  </p>
-  <p>
-    Alors, je suis tout ouï !!!
-  </p>
+  <!-- <h2>Bienvenue Gisèle</h2> -->
+  <h3>
+    Je suis désolé papa
+  </h3>
 </ion-content>
