Changed message + backgound + contact

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,15 +7,45 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Contactez moi par</ion-list-header>
-    <ion-item>
-      <ion-icon name="logo-whatsapp" item-start></ion-icon>
-      00237 675 75 46 29
-    </ion-item>
-    <ion-item>
-      <ion-icon name="logo-facebook" item-start></ion-icon>
-      fb.me/gisele.tonmeu
-    </ion-item>
-  </ion-list>
+    <ion-list>
+      <ion-list-header>
+        Idée originale
+      </ion-list-header>
+      <ion-item>
+          <ion-icon name="ios-contact" item-start></ion-icon>
+        Gisèle TONMEU
+      </ion-item>
+      <ion-item>
+        <ion-icon name="logo-whatsapp" item-start></ion-icon>
+        00237 675 75 46 29
+      </ion-item>
+      <ion-item>
+        <ion-icon name="logo-facebook" item-start></ion-icon>
+        fb.me/gisele.tonmeu
+      </ion-item>
+    </ion-list>
+    <br>
+    <ion-list>
+      <ion-list-header>Réalisation</ion-list-header>
+      <ion-item>
+        <ion-icon name="ios-contact" item-start></ion-icon>
+        Salathiel Genèse YIMGA YIMGA
+      </ion-item>
+      <ion-item>
+        <ion-icon name="ios-call" item-start></ion-icon>
+        00237 682 95 77 97
+      </ion-item>
+      <ion-item>
+        <ion-icon name="logo-whatsapp" item-start></ion-icon>
+        00237 682 95 77 97
+      </ion-item>
+      <ion-item>
+        <ion-icon name="ios-mail" item-start></ion-icon>
+        salathielgenese@gmail.com
+      </ion-item>
+      <ion-item>
+        <ion-icon name="logo-twitter" item-start></ion-icon>
+        @SalathielGenese
+      </ion-item>
+    </ion-list>
 </ion-content>
