--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,17 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>18 Avril</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <!-- <h2>Bienvenue Gisèle</h2> -->
-  <h3>
-    Je suis désolé papa
-  </h3>
+  <p>
+    En cette autre nouvelle année qui s'ouvre a nous, je tiens a te dire mon chéri que si tout était à refaire, j'aurais sans aucune hésitation fait le meme choix.
+  </p>
+  <p>
+      Tu es mon amour, mon ami, mon frère, mon père. Bref tu es tout ce qui me rend heureuse.
+  </p>
+  <p style="text-align: right;">
+    Je t'aime bébé !
+  </p>
 </ion-content>
