--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -47,5 +47,10 @@
         <ion-icon name="logo-twitter" item-start></ion-icon>
         @SalathielGenese
       </ion-item>
+      <ion-item>
+        <ion-icon name="ios-person-add" item-start></ion-icon>
+        Ajouter aux contacts
+        <ion-icon name="ios-add-circle" item-end (click)="saveDevelopperContact()"></ion-icon>
+      </ion-item>
     </ion-list>
 </ion-content>
